fixed otp visibility

--- a/src/App.css
+++ b/src/App.css
@@ -2741,6 +2741,7 @@ width: 100%;
   border-radius: 0.3em;
   background-color: #ffffff;
   outline: none;
+  padding: 0px;
 }
 
 /* Preview Page styles */
